@@ -173,9 +173,10 @@ class SkinCologneBlue extends Skin {
 
 		foreach ( $wgNavigationLinks as $link ) {
 			$msg = wfMsgForContent( $link['href'] );
-			if ( $msg != '-' ) {
+			$text = wfMsg( $link['text'] );
+			if ( $msg != '-' && $text != '-' ) {
 				$s .= '<a href="' . $this->makeInternalOrExternalUrl( $msg ) . '">' .
-					wfMsg( $link['text'] ) . '</a>' . $sep;
+					htmlspecialchars( $text ) . '</a>' . $sep;
 			}
 		}
 
